--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <keycloak.version>26.2.2</keycloak.version>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/instipod/DuoUniversalKeycloakAuthenticator</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>commons-codec</groupId>
